[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/UI/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://src/UI/Hub.gd" type="Script" id=3]
[ext_resource path="res://src/UI/InventoryInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/UI.tres" type="Theme" id=5]
[ext_resource path="res://assets/menus/cockpit.jpg" type="Texture" id=6]
[ext_resource path="res://src/UI/SaveScreen.tscn" type="PackedScene" id=7]

[node name="Hub" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 640.0
margin_bottom = 320.0
rect_min_size = Vector2( 640, 280 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loadout" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 280.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="NinePatchRect" parent="HBoxContainer/Loadout"]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 2 )
patch_margin_left = 18
patch_margin_top = 12
patch_margin_right = 20
patch_margin_bottom = 10

[node name="ShipPreview" type="TextureRect" parent="HBoxContainer/Loadout/Preview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="OptionButton" parent="HBoxContainer/Loadout"]
margin_top = 176.0
margin_right = 160.0
margin_bottom = 193.0
text = "Ship"
align = 1

[node name="Primary" type="OptionButton" parent="HBoxContainer/Loadout"]
margin_top = 209.0
margin_right = 160.0
margin_bottom = 226.0
text = "Primary Weapon"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secondary" type="OptionButton" parent="HBoxContainer/Loadout"]
margin_top = 242.0
margin_right = 160.0
margin_bottom = 259.0
text = "Secondary Weapon"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lore" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 160.0
margin_right = 640.0
margin_bottom = 280.0
rect_min_size = Vector2( 480, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/Lore"]
margin_right = 480.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 10
patch_margin_right = 14
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryInfo" parent="HBoxContainer/Lore/NinePatchRect" instance=ExtResource( 4 )]
visible = false

[node name="LoreText" type="RichTextLabel" parent="HBoxContainer/Lore/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -115.0
margin_right = 230.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="HBoxContainer/Lore"]
margin_top = 254.0
margin_right = 480.0
margin_bottom = 274.0
custom_constants/separation = 10

[node name="Control" type="Control" parent="HBoxContainer/Lore/Options"]
margin_bottom = 20.0

[node name="Inventory" type="Button" parent="HBoxContainer/Lore/Options"]
margin_left = 10.0
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 20 )
toggle_mode = true
text = "Inventory"

[node name="Data" type="OptionButton" parent="HBoxContainer/Lore/Options"]
margin_left = 220.0
margin_right = 450.0
margin_bottom = 20.0
rect_min_size = Vector2( 230, 20 )
text = "Data"
align = 1

[node name="Choices" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = -5.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="to_mission" type="Button" parent="Choices"]
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 30 )
text = "Go on Raid"

[node name="to_trading" type="Button" parent="Choices"]
margin_left = 150.0
margin_right = 290.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 0 )
text = "To Trading Post"

[node name="chat" type="Button" parent="Choices"]
margin_top = 40.0
margin_right = 140.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 30 )
text = "Chat"

[node name="to_saves" type="Button" parent="Choices"]
margin_left = 150.0
margin_top = 40.0
margin_right = 290.0
margin_bottom = 70.0
text = "Journal"

[node name="EndGame" type="Button" parent="."]
margin_left = 470.0
margin_top = 340.0
margin_right = 550.0
margin_bottom = 370.0
text = "Ending"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveScreen" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="item_selected" from="HBoxContainer/Loadout/Ship" to="." method="_on_Ship_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Loadout/Primary" to="." method="_on_Primary_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Loadout/Secondary" to="." method="_on_Secondary_item_selected"]
[connection signal="toggled" from="HBoxContainer/Lore/Options/Inventory" to="." method="_on_Inventory_toggled"]
[connection signal="item_selected" from="HBoxContainer/Lore/Options/Data" to="." method="_on_Data_item_selected"]
[connection signal="pressed" from="Choices/to_mission" to="." method="_on_to_mission_pressed"]
[connection signal="pressed" from="Choices/to_trading" to="." method="_on_to_trading_pressed"]
[connection signal="pressed" from="Choices/chat" to="." method="_on_chat_pressed"]
[connection signal="pressed" from="Choices/to_saves" to="." method="_on_to_saves_pressed"]
[connection signal="pressed" from="EndGame" to="." method="_on_EndGame_pressed"]

[editable path="HUD"]
